# terminator_monitor

./: README.md
.devcontainer/: devcontainer.json
term_track/: .gitignore  README.md  pyproject.toml
term_track/term_track/: App.py  requirements.txt
term_track/term_track/data/: finding_core.json  sdoh_value_set.json  text_SR_TEST_B00001_20231120.json  text_SR_TEST_B00001_20231120.pkl  token_SR_TEST_B00001_20231120.json  token_raj01_20231120.pkl
term_track/term_track/db/: database.py
term_track/term_track/pages/: 1_📈_Project_Progress.py  2_🌍_Dataset.py
